app/stylesheets/alchemy/admin/node-select.scss
.node-select--node,
.node-select--node-url {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.node-select--node {
  display: flex;
  align-items: center;

  > alchemy-icon {
    margin: 0 var(--spacing-2) 0 var(--spacing-1);
  }

  .icon {
    .ts-dropdown .option.active & {
      fill: var(--color-white);
    }
  }
}

.node-select--node-display_name,
.node-select--node-ancestors {
  display: inline-flex;
  align-items: center;
}

.node-select--node-name {
  font-weight: bold;
}

.node-select--node-url {
  margin-left: auto;
  padding: var(--spacing-1) var(--spacing-2);
  color: var(--text-color);
  font-size: var(--font-size_small);

  .ts-dropdown .option.active & {
    color: var(--color-white);
  }
}

